# smart-ocr-system

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: project_brief_and_prd.md  smart_ocr_saas_api_spec.md  smart_ocr_saas_architecture.md  smart_ocr_saas_prd.md  smart_ocr_saas_project_status.md  smart_ocr_saas_wbs.md
docs/test/: architecture_and_design_document.md
smart-ocr-saas/: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
smart-ocr-saas/backend/: .env.example  Dockerfile  Dockerfile.dev  requirements.txt
smart-ocr-saas/backend/app/: __init__.py  config.py  main.py
smart-ocr-saas/backend/app/api/v1/: router.py
smart-ocr-saas/backend/app/api/v1/routes/: admin.py  auth.py  export.py  history.py  ocr.py  websocket.py
smart-ocr-saas/backend/app/core/: database.py  dependencies.py  exceptions.py  security.py
smart-ocr-saas/backend/app/models/: __init__.py  ocr.py  user.py
smart-ocr-saas/backend/app/repositories/: __init__.py  ocr_result_repository.py  ocr_task_repository.py  user_repository.py
smart-ocr-saas/backend/app/services/: __init__.py  auth_service.py  export_service.py  file_service.py  ldap_service.py  ocr_service.py  openai_service.py  user_service.py  websocket_service.py
smart-ocr-saas/backend/scripts/: init_test_user.py  test_db.py  test_openai_vision.py
smart-ocr-saas/backend/tests/: conftest.py
smart-ocr-saas/frontend/: .env.example  package-lock.json  package.json  tailwind.config.ts
smart-ocr-saas/frontend/app/: layout.tsx  page.tsx
smart-ocr-saas/frontend/app/(auth)/login/: page.tsx
smart-ocr-saas/frontend/app/(dashboard)/: layout.tsx
smart-ocr-saas/frontend/app/(dashboard)/history/: page.tsx
smart-ocr-saas/frontend/app/(dashboard)/results/[id]/: page.tsx
smart-ocr-saas/frontend/app/(dashboard)/upload/: page.tsx
smart-ocr-saas/frontend/hooks/: useWebSocket.ts
smart-ocr-saas/frontend/stores/: authStore.ts
smart-ocr-saas/frontend/types/: index.ts
src/smart_ocr/: __init__.py  cli.py
src/smart_ocr/core/: __init__.py  config.py  ocr_engine.py
src/smart_ocr/utils/: __init__.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_cli.py
tests/unit/: __init__.py  test_config.py  test_ocr_engine.py
